@@ -4,7 +4,6 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Component;
 
@@ -49,13 +48,15 @@ public class ApprovalOutboxRepositoryImpl implements ApprovalOutboxRepository {
                         "could be found for saga type " + sagaType))
                 .stream()
                 .map(approvalOutboxDataAccessMapper::approvalOutboxEntityToOrderApprovalOutboxMessage)
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     @Override
-    public Optional<OrderApprovalOutboxMessage> findByTypeAndSagaIdAndSagaStatus(String type,
+    public Optional<OrderApprovalOutboxMessage> findByTypeAndSagaIdAndSagaStatus(
+            String type,
             UUID sagaId,
             SagaStatus... sagaStatus) {
+
         return approvalOutboxJpaRepository
                 .findByTypeAndSagaIdAndSagaStatusIn(type, sagaId,
                         Arrays.asList(sagaStatus))
